<resources>
    <string name="app_name">Yash_Gweiland_Native_Android_Task</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="e_shops">€-$hop</string>
    <string name="exchange">Exchange</string>
    <string name="launchpads">Launchpads</string>
    <string name="wallets">Wallets</string>
    <string name="filter">Filter</string>
    <string name="search_cryptocurrency">Search Cryptocurrency</string>
    <string name="cryptocurrency">Cryptocurrency</string>
    <string name="top_cryptocurrency">Top Cryptocurrencies</string>
    <string name="view_all">View All</string>
    <string name="neft">NEFT</string>
    <string name="filter_bt">Filter by</string>
</resources>