<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/eShopFragment"
        android:icon="@drawable/eshops"
        android:title="@string/e_shops"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/exchangeFragment"
        android:icon="@drawable/exchange"
        android:title="@string/exchange"
        app:showAsAction="ifRoom"/>
    <item
        android:enabled="true"
        android:title=""
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/launchpadsFragment"
        android:icon="@drawable/launchpads"
        android:title="@string/launchpads"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/walletFragment"
        android:icon="@drawable/wallet"
        android:title="@string/wallets"
        app:showAsAction="ifRoom"/>
</menu>