<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="isShowPadding"
            type="Boolean" />

        <import type="android.view.View"/>
        <variable
            name="priceValue"
            type="String" />
        <variable
            name="changeValue"
            type="String" />
        <variable
            name="data"
            type="com.yashgweiland.nativeandroidtask.data.CryptoDataResponse" />
        <variable
            name="viewModel"
            type="com.yashgweiland.nativeandroidtask.ui.viewmodel.MainViewModel" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="26dp"
    tools:context=".ui.ExchangeFragment">

    <LinearLayout
        android:id="@+id/searchContainer"
        android:layout_width="0dp"
        app:layout_constraintHorizontal_weight="1"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toLeftOf="@id/sortLayoutContainer"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingVertical="@dimen/margin_15dp"
        android:paddingHorizontal="@dimen/margin_20dp"
        android:orientation="horizontal"
        android:background="@drawable/edittext_bg_style_100dp"
        android:layout_marginTop="@dimen/margin_10dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            app:srcCompat="@drawable/search"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/searchView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minHeight="@dimen/margin_20dp"
            android:hint="@string/search_cryptocurrency"
            android:textColorHint="@color/black_0B_30"
            android:textColor="@color/black_0B"
            android:background="@color/transparent"
            android:layout_marginStart="@dimen/margin_10dp"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/sortLayoutContainer"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:background="@drawable/filter_bg_style_100dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingVertical="@dimen/margin_15dp"
        android:paddingHorizontal="@dimen/margin_10dp"
        android:layout_marginStart="@dimen/margin_10dp"
        android:layout_marginTop="@dimen/margin_10dp"
        android:onClick="@{()->viewModel.onFilterClick()}"
        app:layout_constraintLeft_toRightOf="@+id/searchContainer"
        >
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/sort"
            android:text="@string/filter"
            android:textColor="@color/black_0B_30"
            android:drawablePadding="@dimen/margin_5dp"/>


    </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/cryptocurrencyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/searchContainer"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="@dimen/margin_15dp"
        android:text="@string/cryptocurrency"
        android:textColor="@color/black_0B"
        android:fontFamily="@font/inter_semibold"
        android:textSize="@dimen/text_size_20sp"
        app:lineHeight="@dimen/text_size_24sp"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/searchContainer"
        app:layout_constraintLeft_toRightOf="@id/cryptocurrencyText"
        android:layout_marginHorizontal="@dimen/margin_20dp"
        android:layout_marginTop="@dimen/margin_15dp"
        android:text="@string/neft"
        android:textColor="@color/black_0B_30"
        android:fontFamily="@font/inter_semibold"
        android:textSize="@dimen/text_size_20sp"
        app:lineHeight="@dimen/text_size_24sp"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topCurrencyContainer"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:background="@drawable/rectangle_bg"
        android:layout_marginTop="@dimen/margin_10dp"
        android:visibility="@{viewModel.isShowView ? View.VISIBLE : View.GONE}"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cryptocurrencyText"
        >

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/bitcoinIcon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:srcCompat="@drawable/icon__bitcoin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="@dimen/margin_20dp"
        android:layout_marginTop="@dimen/margin_20dp"
        />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/brandSlug"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@+id/bitcoinIcon"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/margin_20dp"
            android:layout_marginStart="@dimen/margin_10dp"
            tools:text="BTC"
            android:text="@{data.symbol}"
            android:fontFamily="@font/inter_bold"
            android:textSize="@dimen/text_size_18sp"
            app:lineHeight="21sp"
            android:textAlignment="center"
            android:textColor="@color/black"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/brandName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_10dp"
            android:fontFamily="@font/inter_medium"
            tools:text="Bitcoin"
            android:text="@{data.name}"
            android:layout_marginTop="@dimen/margin_3dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_13sp"
            app:layout_constraintLeft_toRightOf="@+id/bitcoinIcon"
            app:layout_constraintTop_toBottomOf="@+id/brandSlug"
            app:lineHeight="15sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/margin_20dp"
            android:layout_marginEnd="@dimen/margin_10dp"
            tools:text="$55,000 USD"
            android:text="@{priceValue}"
            android:fontFamily="@font/inter_bold"
            android:textSize="@dimen/text_size_16sp"
            app:lineHeight="21sp"
            android:textAlignment="center"
            android:textColor="@color/black"
            />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/changes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/price"
            android:layout_marginEnd="@dimen/margin_10dp"
            android:layout_marginTop="@dimen/margin_3dp"
            android:text="@{changeValue + `%`}"
            android:fontFamily="@font/inter_bold"
            android:textSize="@dimen/text_size_13sp"
            app:lineHeight="21sp"
            android:textAlignment="center"
            android:textColor="@color/green"
            />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:srcCompat="@drawable/mask_group"
        android:scaleType="fitXY"
        />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/topCryptocurrencyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/topCurrencyContainer"
        app:layout_constraintLeft_toLeftOf="parent"
        android:gravity="center"
        android:layout_marginTop="@dimen/margin_15dp"
        android:text="@string/top_cryptocurrency"
        android:textColor="@color/black_0B"
        android:fontFamily="@font/inter_medium"
        android:textSize="@dimen/text_size_18sp"
        app:lineHeight="21sp"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/viewAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/topCurrencyContainer"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/margin_16dp"
        android:gravity="center"
        android:text="@string/view_all"
        android:onClick="@{()->viewModel.onViewClick()}"
        android:textColor="@color/black_0B_50"
        android:fontFamily="@font/inter_medium"
        android:textSize="@dimen/text_size_13sp"
        app:lineHeight="@dimen/text_size_15sp"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cryptoList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_15dp"
        app:layout_constraintVertical_weight="1"
        android:paddingBottom="@{isShowPadding ? @dimen/margin_300dp : @dimen/margin_0dp}"
        android:fitsSystemWindows="true"
        android:overScrollMode="never"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/topCryptocurrencyText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:itemCount="5"
        tools:listitem="@layout/layout_crypto_item"
        tools:visibility="visible" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/progressAnimationView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_fileName="loader.json"
        app:lottie_loop="true" />



</androidx.constraintlayout.widget.ConstraintLayout>
</layout>